// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test users reducer should get message about a problem with authentication 1`] = `
Object {
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "nations": Array [],
  "spells": Array [],
  "technologies": Array [],
  "units": Array [],
}
`;

exports[`test users reducer should get message about nations list's not finding 1`] = `
Object {
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "nations": Array [],
  "spells": Array [],
  "technologies": Array [],
  "units": Array [],
}
`;

exports[`test users reducer should get message about nations list's not finding 2`] = `
Object {
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "nations": Array [],
  "spells": Array [],
  "technologies": Array [],
  "units": Array [],
}
`;

exports[`test users reducer should get message about nations list's not finding 3`] = `
Object {
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "nations": Array [],
  "spells": Array [],
  "technologies": Array [],
  "units": Array [],
}
`;

exports[`test users reducer should get message about units list's not finding 1`] = `
Object {
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "nations": Array [],
  "spells": Array [],
  "technologies": Array [],
  "units": Array [],
}
`;

exports[`test users reducer should load nations list 1`] = `
Object {
  "0": Object {
    "_id": "1111-2222-3333-4444",
    "cost": "1488 gold",
    "hp": "500",
    "name": "Hobok",
    "worker": "tester",
  },
  "errorMessage": "",
  "nations": undefined,
  "spells": Array [],
  "technologies": Array [],
  "units": Array [],
}
`;

exports[`test users reducer should load spells list 1`] = `
Object {
  "0": Object {
    "_id": "1111-2222-3333-4444",
    "cost": "1488 gold",
    "hp": "500",
    "name": "Hobok",
    "worker": "tester",
  },
  "errorMessage": "",
  "nations": Array [],
  "spells": undefined,
  "technologies": Array [],
  "units": Array [],
}
`;

exports[`test users reducer should load technologies list 1`] = `
Object {
  "0": Object {
    "_id": "1111-2222-3333-4444",
    "cost": "1488 gold",
    "hp": "500",
    "name": "Hobok",
    "worker": "tester",
  },
  "errorMessage": "",
  "nations": Array [],
  "spells": Array [],
  "technologies": undefined,
  "units": Array [],
}
`;

exports[`test users reducer should load units list 1`] = `
Object {
  "0": Object {
    "_id": "1111-2222-3333-4444",
    "cost": "1488 gold",
    "hp": "500",
    "name": "Hobok",
    "worker": "tester",
  },
  "errorMessage": "",
  "nations": Array [],
  "spells": Array [],
  "technologies": Array [],
  "units": undefined,
}
`;
